# CMake-libraries-example

./: CMakeLists.txt
examples/: CMakeLists.txt  main.cpp
foo/: CMakeLists.txt
foo/include/: CMakeLists.txt
foo/include/foo/: CMakeLists.txt
foo/src/: CMakeLists.txt
foo/src/foo/: CMakeLists.txt  hello.cpp
